--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,7 +44,8 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "cstdarg": "cpp",
-        "optional": "cpp"
+        "optional": "cpp",
+        "ranges": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
