--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,7 +47,8 @@
         "optional": "cpp",
         "ranges": "cpp",
         "set": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "cstring": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
